welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: '=' expected but 'match' found.
  def a match{
        ^BDR2:33: error: illegal start of simple expression
} 
^